--- a/GoIT/markup/home/lesson1/index.html
+++ b/GoIT/markup/home/lesson1/index.html
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Lesson 1</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 	<body>
 		<div class="container">
 			<h2>Павлюков Игорь</h2>
 
-			<div><img class="photo" src="avatar.jpg" alt="Павлюков Игорь"></div>
+			<center>	
+				<img class="photo" src="img/avatar.jpg" width="140px" height="140px" alt="Павлюков">
+			</center>
 			<p>Студент курса FrontEnd Online 2</p>
 
 				<hr>
@@ -34,8 +36,8 @@
 				<hr>
 
 			
-			<p>Мой фидбек:</p>
-			<p>Готов обучаться</p>
+			<p>Мой фидбек: <br>
+			Готов обучаться</p>
 		</div>
 	</body>
 </html>
