--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
 <div class="main">
-	<div class="header">
+	<header>
 		<img src="img/logo.png" alt="">
-		<div class="contacts">Наши контакты: <br>
-		+9-098-765-4321<br>
-		+9-0123-456-890<br>
-		info@asia-holidays.com<br>
+		<div class="contacts">
+					<div class="bold">Наши контакты:</div>
+					<div class="regular">+9-098-765-4321</div>
+					<div class="regular">+9-0123-456-890</div>
+					<div class="regular">info@asia-holidays.com</div>
 		</div>
 
-		
-		<ul class="contries">
+		<ul class="countries">
 		<li><a href="#"><img src="img/i_flag.jpg">Индия</a></li>
 		<li><a href="#"><img src="img/n_flag.jpg">Непал</a></li>
 		<li><a href="#"><img src="img/t_flag.jpg">Тибет</a></li>
@@ -26,15 +26,15 @@
 		<li><a href="#"><img src="img/m_flag.jpg">Мальдивы</a></li>
 		</ul>
 		
-	</div>
+	</header>
 
 	<div class="logo">
 		<img src="img/photo.jpg" alt="">
 	</div>
-<nav>
+	<nav>
 			<ul class="menu">
 				<li><a href="#">Главная</a></li>
-				<li><a href="#">Путешествие</a>
+				<li><a href="#">Путешествие<img class="triangle" src="img/triangle.png" alt="список"></a>
 					<ul>
 						<li><a href="#">Путешествие 1</a></li>
 						<li><a href="#">Путешествие 2</a></li>
@@ -43,16 +43,46 @@
 						<li><a href="#">Путешествие 5</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Услуги</a></li>
-				<li><a href="#">Партнерам</a></li>
+
+				<li><a href="#">Услуги<img class="triangle" src="img/triangle.png" alt="список"></a>
+					<ul>
+						<li><a href="#">Услуги 1</a></li>
+						<li><a href="#">Услуги 2</a></li>
+						<li><a href="#">Услуги 3</a></li>
+						<li><a href="#">Услуги 4</a></li>
+						<li><a href="#">Услуги 5</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Партнерам<img class="triangle" src="img/triangle.png" alt="список"></a>
+					<ul>
+						<li><a href="#">Партнерам 1</a></li>
+						<li><a href="#">Партнерам 2</a></li>
+						<li><a href="#">Партнерам 3</a></li>
+						<li><a href="#">Партнерам 4</a></li>
+						<li><a href="#">Партнерам 5</a></li>
+					</ul>
+				</li>
 				<li><a href="#">Отзыв клиентов</a></li>
 				<li><a href="#">О нас</a></li>
 				<li><a href="#">Контакты</a></li>
 			</ul>
-		</nav>
-	<div class="box-left"></div>
-	<div class="content"></div>
-	<div class="box-right"></div>
-</div>
+	</nav>
+				<div class="container">
+
+					<div class="box-left">
+					<h1>Информация</h1>
+						<p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
+					</div>
+					<div class="box-center">
+						<p> </p>
+					</div>
+					<div class="box-right">
+					<h1>Новости</h1>	
+						<p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet  Lorem ipsum dolor sit amet  Lorem ipsum dolor sit amet  Lorem ipsum dolor sit amet  Lorem ipsum dolor sit amet  Lorem ipsum dolor sit amet </p>	
+					</div>
+				</div>
+	<footer class="footer">
+		<p>Copyright &copy info@asia-holidays.com, 2010 </p>
+	</footer>
 </body>
 </html>
