--- a/GoIT/markup/home/lesson3/index.html
+++ b/GoIT/markup/home/lesson3/index.html
@@ -9,20 +9,22 @@
 </head>
 <body>
 
-<div class="container">
-	<div class="header">
-		<img src="img/header/logo.png" alt="">
-	</div>
 
-	<div class="menu">
-			<ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Товары</a></li>
-				<li><a href="#">О нас</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>	
-	</div>	
-
+	<div class="container">
+		<div class="header">
+			<div class="logo">
+				<img src="img/header/logo.png" alt="">
+			</div>
+					<div class="header_clear"></div>
+			<div class="menu">
+					<ul>
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Товары</a></li>
+						<li><a href="#">О нас</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>	
+			</div>	
+		</div>
 	<div class="item">
 		<div class="left-menu">
 				<ul>
@@ -34,25 +36,32 @@
 				<li><a href="#">Автотовары</a></li>
 			</ul>	
 		</div>	
-	
+
 		<div class="content">
-			<center><img src="img/container/image.jpg" alt=""></center>
+			<div class="velo_img">
+				<img src="img/container/image.jpg" alt="">
+			</div>
 
+			<p class="item_short_descr">Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
 		</div>
-		<p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p>
-	</div>
 
+		<div class="content_clear"></div>
+	
+	</div>
 
 	<div class="footer">
-		<ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Товары</a></li>
-				<li><a href="#">О нас</a></li>
-				<li><a href="#">Контакты</a></li>
-				<li>2015 &copy; All rights reserved</li>
-		</ul>	
-		
+			<ul>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Товары</a></li>
+					<li><a href="#">О нас</a></li>
+					<li><a href="#">Контакты</a></li>
+			</ul>	
+			<div class="copyright">
+			2015 &copy; All rights reserved
+			</div>
+			<div class="footer_clear"></div>
 	</div>
-</div>
+	
+
 </body>
 </html>
