--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -82,8 +82,10 @@
 					</div>
 					
 				</div>
-	<div class="footer">
-		<p>Copyright &copy info@asia-holidays.com, 2010</p>
 	</div>
+	<div class="footer">
+		Copyright &copy info@asia-holidays.com, 2010
+	</div>
+
 </body>
 </html>
