--- a/GoIT/markup/home/lesson4/index.html
+++ b/GoIT/markup/home/lesson4/index.html
@@ -9,8 +9,8 @@
 <body>
 <div class="main clearfix">
 	<header>
-		<img src="img/logo.png" alt="">
-		<div class="contacts">
+		<div class="logo"><img src="img/logo.png" alt=""></div>
+		<div class="contacts clearfix">
 					<div class="bold">Наши контакты:</div>
 					<div class="regular">+9-098-765-4321</div>
 					<div class="regular">+9-0123-456-890</div>
@@ -28,7 +28,7 @@
 		
 	</header>
 
-	<div class="logo">
+	<div class="photo">
 		<img src="img/photo.jpg" alt="">
 	</div>
 	<nav>
