--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -11,18 +11,22 @@
 	<div class="main">
 		<header>
 			<ul class="menu">
-				<li><a href="#">Meu YouBike</a></li>
-				<li><a href="#">Vender</a></li>
-				<li><a href="#">Forum</a></li>
-				<li><a href="#">Contato</a></li>
-				<li><a href="#">Ajuda</a></li>
-				<li class="line"><a href="#"> </a></li>
-				<div class="minhas"><a href="#">Minhas Ofertas</a></div>
-				<div class="register"><span>Ola!</span><a href="#">Entrar</a><span>ou</span><a href="#">Cadastre-se</a></div>
-		    </ul>	
+			<li><a href="#">Meu Youbike</a></li>
+			<li><a href="#">Vender</a></li>
+			<li><a href="#">Forum</a></li>
+			<li><a href="#">Contato</a></li>
+			<li><a href="#">Ajuda</a></li>
+			<li class="line"> </li>
+		</ul>
+		<ul class="menu_2">
+			<li><img src="img/flag.png" height="24" alt=""></li>
+			<li>Minhas Ofertas</li>
+			<li>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
+		</ul>	
 		</header>
 
 	<section>
+	<div class="box">
 		<div class="cadastre-se">
 			<h1>Cadastre-se</h1>
 		</div>	
@@ -47,6 +51,7 @@
 				Xiew our Privacy Policy.</p>
 			</div>
 		</div>	
+	</div>
 	</section>
 </div>
 </body>
