--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -10,6 +10,7 @@
 <body>
 	<div class="main">
 		<header>
+		<div class="menu-item">
 			<ul class="menu">
 			<li><a href="#">Meu Youbike</a></li>
 			<li><a href="#">Vender</a></li>
@@ -22,7 +23,8 @@
 			<li><img src="img/flag.png" height="24" alt=""></li>
 			<li>Minhas Ofertas</li>
 			<li>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
-		</ul>	
+		</ul>
+		</div>	
 		</header>
 
 	<section>
@@ -32,18 +34,21 @@
 		</div>	
 
 		<div class="info">
-			<a href="http://facebook.com"><img class="facebook" src="img/facebook.jpg" alt="facebook"></a>
-
-			<div class="ou"><img src="img/ou.png" alt=""></div>
+			<div class="facebook">
+				<a href="http://facebook.com"><span class=letter-f>F</span><span>Log In</span>with<span>Facebook</span></a>
+			</div>
+			<div class="ou">
+				<div class="ou-text"></div> OU <div class="ou-text"></div>
+			</div>
 
 			<form action="#">
-					<div><input type="text" name="firstname" id="firstname" placeholder="First Name" ></div>
-					<div><input type="text" name="lastname"id="lastname" placeholder="Last Name"></div>
-					<div><input type="email" name="email" id="email" placeholder="Email Address"></div>
-					<div><input type="password" name="password" id="psw" placeholder="Choose Password"></div>
-					<div><input type="password" name="confirm_password" id="con_psw" placeholder="Password Confirm"></div>
+					<input type="text" name="firstname" id="firstname" placeholder="First Name" required>
+					<input type="text" name="lastname"id="lastname" placeholder="Last Name" required>
+					<input type="email" name="email" id="email" placeholder="Email Address" required>
+					<input type="password" name="password" id="psw" placeholder="Choose Password" required>
+					<input type="password" name="confirm_password" id="con_psw" placeholder="Password Confirm" required>
 					<div class="check"><label><input type="checkbox" name="checkbox"><span class="checkbox"> Send me Youbike updates and tips</span></label></div>
-					<div><input type="submit" value="Create my Account"id="submit" ></div>
+					<input type="submit" value="Create my Account"id="submit" >
 			</form>
 
 			<div class="text">
