--- a/GoIT/markup/home/lesson5/index.html
+++ b/GoIT/markup/home/lesson5/index.html
@@ -24,18 +24,18 @@
 			<li>Minhas Ofertas</li>
 			<li>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></li>
 		</ul>
-		</div>	
+		</div>
 		</header>
 
 	<section>
 	<div class="box">
 		<div class="cadastre-se">
 			<h1>Cadastre-se</h1>
-		</div>	
+		</div>
 
 		<div class="info">
-			<div class="facebook">
-				<a href="http://facebook.com"><span class=letter-f>F</span><span>Log In</span>with<span>Facebook</span></a>
+			<div class="fb-button">
+				<a href="#" class="title"><strong><span class="icon">f</span>Log In</strong> with <strong>Facebook</strong></a>
 			</div>
 			<div class="ou">
 				<div class="ou-text"></div> OU <div class="ou-text"></div>
@@ -55,7 +55,7 @@
 				<p>By clicking the button above, you agree to the Terms of Service
 				Xiew our Privacy Policy.</p>
 			</div>
-		</div>	
+		</div>
 	</div>
 	</section>
 </div>
