--- a/GoIT/js/JS19-20/src/index.html
+++ b/GoIT/js/JS19-20/src/index.html
@@ -17,8 +17,8 @@
   		  <header>
           <a href="#" class="header__logo">
   		    <img src="img/logo.png" alt="logo" />
-          <p class="header__logo__text--top">Build Home</p>
-          <p class="header__logo__text--bottom">INDUSTRIAL THEME</p>
+          <p class="header__text--top">Build Home</p>
+          <p class="header__text--bottom">INDUSTRIAL THEME</p>
           </a>
 
           <div class="header__contacts">
@@ -52,144 +52,122 @@
               <p>BUSINESS</p>
             </div>
           </div>
-            <div class="header__information-block">
-      				<div class="header__information header__information--first">
-      					<p class="header__information__huge-number">01</p>
+            <div class="information__block">
+      				<div class="information information--first">
+      					<p class="information__huge-number">01</p>
       					<img src="img/icon1.png" alt="">
-      					<p class="header__information__name">Power Inside</p>
-      					<p class="header__information__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
-      					<a href="#" class="header__information__button">Read more &#8594;</a>
+      					<p class="information__name">Power Inside</p>
+      					<p class="information__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
+      					<a href="#" class="information__button">Read more &#8594;</a>
       				</div>
 
-      				<div class="header__information header__information--second">
-      					<p class="header__information__huge-number">02</p>
+      				<div class="information information--second">
+      					<p class="information__huge-number">02</p>
       					<img src="img/icon2.png" alt="">
-      					<p class="header__information__name">New Technologies</p>
-      					<p class="header__information__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
-      					<a href="#" class="header__information__button">Read more &#8594;</a>
+      					<p class="information__name">New Technologies</p>
+      					<p class="information__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
+      					<a href="#" class="information__button">Read more &#8594;</a>
       				</div>
 
-      				<div class="header__information header__information--third">
-      					<p class="header__information__huge-number">03</p>
+      				<div class="information information--third">
+      					<p class="information__huge-number">03</p>
       					<img src="img/icon3.png" alt="">
-      					<p class="header__information__name">Fast Support</p>
-      					<p class="header__information__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
-      					<a href="#" class="header__information__button">Read more &#8594;</a>
+      					<p class="information__name">Fast Support</p>
+      					<p class="information__text">Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique</p>
+      					<a href="#" class="information__button">Read more &#8594;</a>
       				</div>
       			</div>
         </header>
 
         <div class="content">
-      			<div class="content__services-container">
-      				<p class="content__services__title">Our Services</p>
-      				<div class="content__services content__services--first">
-      					<a href="#" class="content__services--img"><img src="img/imeg1.png" alt=""></a>
-      					<a href="#" class="content__services__text">Schedule services</a>
+      			<div class="services__container">
+      				<p class="services__title">Our Services</p>
+      				<div class="services__block services__block--first">
+      					<a href="#" class="services__img"><img src="img/imeg1.png" alt=""></a>
+      					<a href="#" class="services__text">Schedule services</a>
       				</div>
 
-      				<div class="content__services content__services--second">
-      					<a href="#" class="content__services--img"><img src="img/imeg2.png" alt=""></a>
-      					<a href="#" class="content__services__text">Preventive Maintence</a>
+      				<div class="services__block services__block--second">
+      					<a href="#" class="services__img"><img src="img/imeg2.png" alt=""></a>
+      					<a href="#" class="services__text">Preventive Maintence</a>
       				</div>
 
-      				<div class="content__services content__services--third">
-      					<a href="#" class="content__services--img"><img src="img/imeg3.png" alt=""></a>
-      					<a href="#" class="content__services__text">Tire & Wheel Services</a>
+      				<div class="services__block services__block--third">
+      					<a href="#" class="services__img"><img src="img/imeg3.png" alt=""></a>
+      					<a href="#" class="services__text">Tire & Wheel Services</a>
       				</div>
 
-      				<div class="content__services content__services--foreth">
-      					<a href="#" class="content__services--img"><img src="img/imeg4.png" alt=""></a>
-      					<a href="#" class="content__services__text">Repair Services</a>
+      				<div class="services__block services__block--fourth">
+      					<a href="#" class="services__img"><img src="img/imeg4.png" alt=""></a>
+      					<a href="#" class="services__text">Repair Services</a>
       				</div>
       			</div>
 
-      			<div class="content__news-container">
-      				<div class="content__news">
+      			<div class="news__box">
+      				<div class="news">
 
-      					<div class="content__latest-news">
-      						<p class="content__latest-news__title">Latest News</p>
-      						<div class="content__latest-news__box content__latest-news__box--first">
+      					<div class="news__latest">
+      						<p class="news__title">Latest News</p>
+      						<div class="news__container news__container--first">
       							<img src="img/news1.png" alt="">
-      							<p class="content__latest-news--title">
+      							<p class="news__name">
       								Advanced Machinery Help Impove Quality
       							</p>
-      							<p class="content__latest-news--by">
+      							<p class="news__by">
       								by <span>cmsmasters</span>
       							</p>
-      							<p class="content__latest-news--comments">
+      							<p class="news__comments">
       								Comments <span>(6)</span>
       							</p>
-      							<p class="content__latest-news--text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+      							<p class="news__text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
       						</div>
 
-      						<div class="content__latest-news__box content__latest-news__box--second">
+      						<div class="news__container news__container--second">
       							<img src="img/news2.png" alt="">
-      							<p class="content__latest-news--title">
+      							<p class="news__name">
       								Advanced Machinery Help Impove Quality
       							</p>
-      							<p class="content__latest-news--by">
+      							<p class="news__by">
       								by <span>cmsmasters</span>
       							</p>
-      							<p class="content__latest-news--comments">
+      							<p class="news__comments">
       								Comments <span>(6)</span>
       							</p>
-      							<p class="content__latest-news--text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+      							<p class="news__text">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
       						</div>
       					</div>
-      					<div class="content__banners" >
-      						<p class="content__banners__title">Banner Place</p>
 
-      						<div class="banner">
 
-      							<div class="banner__title" id="first-banner-title">
-      								<p class="banner__title__plus"> + </p>
-      								<p class="banner__title__minus"> - </p>
-      								<p class="banner__title__text">
-      									ACCORDING PANEL 1
-      								</p>
+      					<div class="banners" >
+      						<p class="banners__title">Banner Place</p>
 
-      							</div>
-      							<p class="banner__content" id="first-banner-content">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-      						</div>
+                  <div class="accordion">
+                  						<div class="accordion__tab">
+                  							<p class="accordion__title">Accordion Panel 1</p>
+                  						</div>
+                  						<p class="accordion_article">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                  					</div>
 
-      						<div class="banner banner--modify">
+                  					<div class="accordion">
+                  						<div class="accordion__tab">
+                  							<p class="accordion__title">Accordion Panel 2</p>
+                  						</div>
+                  						<p class="accordion_article">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                  					</div>
 
-      							<div class="banner__title" id="second-banner-title">
-      								<p class="banner__title__plus"> + </p>
-      								<p class="banner__title__minus"> - </p>
-      								<p class="banner__title__text">
-      									ACCORDING PANEL 2
-      								</p>
-
-      							</div>
-      							<p class="banner__content" id="second-banner-content">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-      						</div>
-
-      						<div class="banner banner--modify">
-
-      							<div class="banner__title" id="third-banner-title">
-      								<p class="banner__title__plus"> + </p>
-      								<p class="banner__title__minus"> - </p>
-      								<p class="banner__title__text">
-      									ACCORDING PANEL 3
-      								</p>
-
-      							</div>
-      							<p class="banner__content" id="third-banner-content">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-      						</div>
-
-      						<div class="banner banner--modify">
-
-      							<div class="banner__title" id="forth-banner-title">
-      								<p class="banner__title__plus"> + </p>
-      								<p class="banner__title__minus"> - </p>
-      								<p class="banner__title__text">
-      									ACCORDING PANEL 4
-      								</p>
-
-      							</div>
-      							<p class="banner__content" id="forth-banner-content">Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.Cum sociis natoque penatibus et magnis dis parturient ontesmus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
-      						</div>
+                  					<div class="accordion">
+                  						<div class="accordion__tab">
+                  							<p class="accordion__title">Accordion Panel 3</p>
+                  						</div>
+                  						<p class="accordion_article">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                  					</div>
+                            
+                  					<div class="accordion">
+                  						<div class="accordion__tab">
+                  							<p class="accordion__title">Accordion Panel 4</p>
+                  						</div>
+                  						<p class="accordion_article">Cum sociis natoque penatibus et magnis dis parturient mus. Pro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur momo. Cum sociis natoque penatibus et magnis dis parturient ontesmus. Nemo enim ipsam voluptatem quia ptas sit aspernatur samomoPro vel nibh et elit mollis commodo et nec augueique Nemo enim ipsam voluptatem quia ptas sit aspernatur samomo enim ipsam voluptatem.</p>
+                  					</div>
 
       					</div>
       				</div>
