--- a/portfolio/weblab/index.html
+++ b/portfolio/weblab/index.html
@@ -204,13 +204,13 @@
           <p>support@v2e.nz</p>
           <p>1 Courthouse Lane, Auckland</p>
         </div>
-        <form action="#">
+        <form class="clearfix" action="#">
             <div class="form__left">
               <input type="name" name="name" placeholder="Name">
               <input type="email" name="email" placeholder="Email">
               <input type="phone" name="phone" placeholder="Phone">
             </div>
-            <div class="form__right">
+            <div class="form__right clearfix">
               <textarea placeholder="Message"></textarea>
             </div>
             <input type="submit" value="Submit">
