--- a/portfolio/weblab/index.html
+++ b/portfolio/weblab/index.html
@@ -32,7 +32,9 @@
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-3">
           <a href="#" class="header__logo"></a>
       </div>
-      <div class="col-lg-4 col-md-4 col-md-offset-5 col-sm-8 menu">
+      <div class="col-lg-4 col-md-4 col-md-offset-5 col-sm-8">
+        <a class="menu__link" href="#">MENU</a>
+        <div class="menu">
         <nav>
           <ul>
             <li class="list-item"><a href="#">Home</a></li>
@@ -44,6 +46,7 @@
           </ul>
         </nav>
       </div>
+    </div>
 
   </div>
 </div>
@@ -84,7 +87,7 @@
 </div>
 
 <div class="svg-block-1">
-  <div class='clip_1 wow fadeInLeft'>
+  <div class='clip_1'>
     <div class="clip_left">
       <p>ROBUST</p>
     </div>
@@ -92,14 +95,14 @@
       <p>EFFICIENT</p>
     </div>
   </div>
-  <div class="clip_2 wow fadeInLeft">
+  <div class="clip_2">
     <div class="clip__box">
     <span>Voicemail messages delivered by mp3 file to your email inbox, eliminating potential human and/or software translation errors.</span>
     <cite>Get In Touch</cite>
     <cite class="cite__bottom">1 Courthouse Lane, Auckland</cite>
    </div>
   </div>
-  <div class='clip_3 wow fadeInRight'>
+  <div class='clip_3'>
     <div class="clip__box">
 
     <span>Voicemail messages delivered by mp3 file to your email inbox, eliminating potential human and/or software translation errors.</span>
@@ -107,7 +110,7 @@
     <cite class="cite__bottom">1 Courthouse Lane, Auckland</cite>
 </div>
   </div>
-  <div class="clip_4 wow fadeInRight">
+  <div class="clip_4">
     <div class="clip_left">
       <p>MANAGED</p>
     </div>
